fixed overflow size of cards

--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@ button{
     flex: 300px;
     height: 350px;
     min-width:220px;
+    max-width: 380px;
     background-color: rgba(223, 217, 187, 0.2);
 
 }
@@ -199,7 +200,21 @@ button{
 @media screen and (max-width: 610px){
     .nav-list{
         display: none;
+        
     }
 }
 
+
+@media screen and (max-width: 820px){
+    .card-div{
+        display:flex;
+        padding: 20px 90px;
+        margin: 10px;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: center;
+        gap: 30px;
+        flex-grow: 0;
+    }
+}
 
